[project]
name = "wav2lip"
version = "0.1.0"
description = "Wav2Lip - Accurately Lip-syncing Videos In The Wild"
requires-python = ">=3.8"
dependencies = [
    "librosa<1.0.0",
    "numpy<2.0.0",
    "opencv-contrib-python<5.0.0",
    "opencv-python<5.0.0",
    "torch<3.0.0",
    "torchvision<1.0.0",
    "numba<1.0.0",
    "mediapipe<1.0.0",
    "batch-face<2.0.0",
    "ffmpeg-python<1.0.0",
    "scipy<2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wav2lip"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "I001", # isort
    "D403", # docstring
]

[tool.ruff.lint.isort]
known-first-party = ["wav2lip"]
